# PlaneDetection

./: CMakeLists.txt  README.md
GRANSAC/: readme.md
OPS/: readme.md
OPS/include/: Ops.h
OPS/src/: Ops.cpp
PEAC/include/: plane_detection.h
PEAC/src/: peac_test.cpp  plane_detection.cpp
RSPD/src/: planedetector.cpp
doc/: depth-to-point.py  point-cloud-xyz.cpp
include/: plane_detection.h
include/peac/: AHCPlaneFitter.hpp
local_map/src/: local_map.cpp  local_map_test.cpp  pose.cpp  realsense_driver.cpp
src/: plane_detection.cpp  realsense_test.cpp
